# f1-post-race-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
dashboard/: app.py
dashboard/.streamlit/: config.toml
dashboard/components/: charts.py
dashboard/pages/: 1_race_analysis.py  1_session_analysis.py  2_predictions.py  3_season_trends.py  4_load_data.py
docs/: dashboard-guide.md  implementation-plan.md  improvements.md  research.md
notebooks/: scratch.ipynb
scripts/: export_blog_charts.py  post_race_etl.py
src/: circuit.py  export.py  loader.py  metrics.py  prediction.py  strategy.py
tests/: test_circuit.py  test_loader.py  test_metrics.py  test_prediction.py
