[project]
name = "f1-post-race-analysis"
version = "0.1.0"
description = "Post-race Formula 1 analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "jupyterlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
